[package]
name = "finad"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
lopdf = "0.27"
regex = "1.11"
pdf-extract = "0.7"
once_cell = "1.21.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.51.0", features = ["full"] }
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["cors"] }
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
